# weft

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  install.sh  rust-toolchain.toml  setup.sh
.claude/: CLAUDE.md  (+1 more)
crates/weft-assets/: Cargo.toml
crates/weft-assets/src/: lib.rs
crates/weft-assets/tests/: sync.rs
crates/weft-broker/: Cargo.toml
crates/weft-broker-client/: Cargo.toml
crates/weft-broker-client/src/: client.rs  lib.rs  lifecycle_command.rs  protocol.rs  token.rs
crates/weft-broker/src/: auth.rs  cost_gate.rs  credential.rs  entitlement.rs  handlers.rs  lib.rs  main.rs  provider_proxy.rs  runtime_storage.rs  runtime_store.rs  scope.rs  state.rs
crates/weft-broker/tests/: provider_decl_resolution.rs  runtime_store.rs
crates/weft-cli/: Cargo.toml
crates/weft-cli/src/: client.rs  hash.rs  images.rs  main.rs  progress.rs  prompt.rs  walk.rs
crates/weft-cli/src/commands/: activate.rs  add.rs  assets.rs  build.rs  cancel_activate.rs  cancel_build.rs  cancel_running.rs  catalog.rs  daemon.rs  daemon_stop.rs  deactivate.rs  describe_nodes.rs  ensure.rs  executions.rs  files.rs  follow.rs  infra.rs  listener.rs  logs.rs  mod.rs  new.rs  node_catalog.rs  parse.rs  ps.rs  resync.rs  rm.rs  run.rs  start.rs  status.rs  stop.rs  token.rs
crates/weft-compiler/: Cargo.toml
crates/weft-compiler/src/: build.rs  build_plan.rs  codegen.rs  describe.rs  edit.rs  enrich.rs  error.rs  file_reader.rs  file_ref.rs  hash.rs  image_set.rs  lib.rs  parser.rs  project.rs  source_name.rs  validate.rs  weft_compiler.rs  worker_image.rs
crates/weft-compiler/src/cst/: kind.rs  lexer.rs  marker.rs  mod.rs  nodes.rs  parser.rs
crates/weft-compiler/src/edit/: ops.rs  tests.rs
crates/weft-compiler/src/tests/: file_reader_tests.rs  file_ref_tests.rs
crates/weft-compiler/tests/: enrich_tests.rs  infra_image_enum.rs  parser_multiline_object.rs  parser_tests.rs  provider_decl_hash.rs  validate_tests.rs
crates/weft-core/: Cargo.toml
crates/weft-core/src/: access.rs  bus.rs  caller.rs  caller_token.rs  cancellation.rs  context.rs  error.rs  executor_core.rs  frames.rs  instance_registry.rs  lane.rs  lib.rs  node.rs  primitive.rs  project.rs  pulse.rs  running_policy.rs  signed_token.rs  storage.rs  tag.rs  test_support.rs  wait.rs  weft_compiler.rs  weft_type.rs
crates/weft-core/src/exec/: completion.rs  emission.rs  execution.rs  mod.rs  mutations.rs  postprocess.rs  preprocess.rs  ready.rs  skip.rs  typecheck.rs
crates/weft-core/src/infra/: compile.rs  hash.rs  mod.rs  types.rs
crates/weft-core/src/signal/: auth.rs  form.rs  live_connection.rs  mod.rs  poll_endpoint.rs  socket_listen.rs  sse.rs  sse_subscribe.rs  timer.rs  webhook.rs
crates/weft-core/src/storage/: key.rs  mod.rs
crates/weft-core/src/tests/: weft_type_tests.rs
crates/weft-dispatcher/: Cargo.toml
crates/weft-dispatcher/src/: app.rs  authenticator.rs  backend.rs  cold_start.rs  config.rs  events.rs  infra.rs  infra_event.rs  infra_event_bridge.rs  infra_lifecycle_command.rs  infra_node.rs  journal.rs  journal_bridge.rs  lease.rs  lib.rs  lifecycle_claimer.rs  listener.rs  main.rs  namespace_registry.rs  pg_wake.rs  placement.rs  project_namespace.rs  project_store.rs  provider_decl.rs  reaper.rs  registry.rs  routing.rs  scheduler.rs  shared_worker_namespace.rs  slots.rs  state.rs  storage.rs  storage_box.rs  supervisor_pool.rs  tenant.rs  tenant_namespace.rs  transition.rs
crates/weft-dispatcher/tests/: db_lifecycle.rs  tenant_isolation.rs  webhook_flow.rs
crates/weft-e2e/: Cargo.toml  README.md  run-e2e.sh
crates/weft-e2e/src/: assert.rs  bus.rs  client.rs  ensure.rs  event.rs  fakes.rs  human.rs  infra.rs  lib.rs  live.rs  platform.rs  project.rs  run.rs  signal.rs  status.rs  storage.rs  teardown.rs
crates/weft-e2e/tests/: bus.rs  config_media.rs  custom_node.rs  human_form.rs  human_trigger_enum.rs  infra.rs  lifecycle_transitions.rs  listener_move.rs  listener_scaledown.rs  live_chat.rs  loops.rs  multi_worker.rs  openrouter.rs  openrouter_custom.rs  plain.rs  reach_out.rs  resume.rs  skip.rs  storage.rs  storage_multipart.rs  supervisor_pool.rs  web_trigger.rs  worker_placement.rs
crates/weft-engine/: Cargo.toml
crates/weft-engine/src/: caller_conn.rs  context.rs  dispatcher_link.rs  execution_driver.rs  lib.rs  loop_driver.rs  loop_runtime.rs  metering.rs  run_pod.rs  storage.rs
crates/weft-infra/: Cargo.toml
crates/weft-infra-supervisor/: Cargo.toml
crates/weft-infra-supervisor/src/: broker_ops.rs  health.rs  health_engine.rs  lib.rs  lifecycle.rs  main.rs  ownership.rs  protocol.rs
crates/weft-infra-supervisor/tests/: health_loop.rs  lifecycle_loop.rs  ownership_loop.rs
crates/weft-infra/src/: lib.rs
crates/weft-journal/: Cargo.toml
crates/weft-journal/src/: events.rs  lib.rs  traits.rs  write.rs
crates/weft-listener/: Cargo.toml
crates/weft-listener/src/: config.rs  fire_sink.rs  lib.rs  main.rs  protocol.rs  registry.rs  relay.rs  router.rs
crates/weft-listener/tests/: end_to_end.rs
crates/weft-platform-traits/: Cargo.toml
crates/weft-platform-traits/src/: clock.rs  drain.rs  kube.rs  lib.rs  mem_pressure.rs  object_store.rs
crates/weft-providers/: Cargo.toml
crates/weft-providers/src/: lib.rs  sse.rs
crates/weft-providers/tests/: project_defined_meter.rs
crates/weft-runner/: Cargo.toml
crates/weft-runner/src/: context.rs  lib.rs  loop_driver.rs  main.rs
crates/weft-runner/tests/: end_to_end.rs
crates/weft-stdlib/: Cargo.toml
crates/weft-stdlib/src/: lib.rs
crates/weft-stdlib/tests/: metadata_parses.rs
crates/weft-storage/: Cargo.toml
crates/weft-storage/src/: auth.rs  boxstate.rs  capability.rs  client.rs  config.rs  disk.rs  index.rs  key.rs  lib.rs  main.rs  protocol.rs  resize.rs  service.rs  store.rs  testing.rs
crates/weft-storage/tests/: placement.rs  resize_watcher.rs  service.rs
crates/weft-task-store/: Cargo.toml
crates/weft-task-store/src/: executor.rs  kinds.rs  lib.rs  tasks.rs  traits.rs  worker_pod.rs
crates/weft-task-store/tests/: live_admission.rs
(+429 files in other folders)
