[workspace]
resolver = "2"
members = [
    "crates/weft-core",
    "crates/weft-compiler",
    "crates/weft-dispatcher",
    "crates/weft-cli",
    "crates/weft-stdlib",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "LicenseRef-OSAASy"
repository = "https://github.com/WeaveMindAI/weft"

[workspace.dependencies]
# async + runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# http
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# durability
restate-sdk = "0.7"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# cli
clap = { version = "4", features = ["derive", "env"] }

# errors
thiserror = "2"
anyhow = "1"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
regex = "1"

# internal workspace crates
weft-core = { path = "crates/weft-core" }
weft-compiler = { path = "crates/weft-compiler" }
weft-stdlib = { path = "crates/weft-stdlib" }
