[workspace]
resolver = "2"
members = [
    "crates/weft-core",
    "crates/weft-compiler",
    "crates/weft-dispatcher",
    "crates/weft-cli",
    "crates/weft-engine",
    "crates/weft-catalog",
    "crates/weft-journal",
    "crates/weft-listener",
    "crates/weft-task-store",
    "crates/weft-broker",
    "crates/weft-broker-client",
    "crates/weft-infra",
    "crates/weft-infra-supervisor",
    "crates/weft-platform-traits",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "LicenseRef-OSAASy"
repository = "https://github.com/WeaveMindAI/weft"

[workspace.dependencies]
# async + runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# http
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# lossless concrete syntax tree (the .weft CST: parse, edit, byte-exact round-trip)
rowan = "0.16"

# cli
clap = { version = "4", features = ["derive", "env"] }

# errors
thiserror = "2"
anyhow = "1"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# utils
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
regex = "1"
inventory = "0.3"
url = "2"
hmac = "0.12"
sha2 = "0.10"
tempfile = "3"
parking_lot = "0.12"
ipnet = "2"

# internal workspace crates
weft-core = { path = "crates/weft-core" }
weft-compiler = { path = "crates/weft-compiler" }
weft-engine = { path = "crates/weft-engine" }
weft-catalog = { path = "crates/weft-catalog" }
weft-journal = { path = "crates/weft-journal" }
weft-task-store = { path = "crates/weft-task-store" }
weft-platform-traits = { path = "crates/weft-platform-traits" }
