[package]
name = "weft-assets"
version = "0.2.0"
edition = "2021"

[dependencies]
weft-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
