[package]
name = "weft-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "weft-broker"
path = "src/main.rs"

[dependencies]
weft-core = { workspace = true }
weft-journal = { workspace = true }
weft-task-store = { workspace = true }
weft-infra = { path = "../weft-infra" }
weft-broker-client = { path = "../weft-broker-client" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono"] }
lru = "0.12"
reqwest = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
getrandom = "0.2"
parking_lot = "0.12"
