[package]
name = "weft-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
cron = "0.12"
sha2 = { workspace = true }
# Storage-plane byte streaming: `storage::ByteStream` is a
# `futures::stream::BoxStream` of Bytes, named in the `ContextHandle`
# storage methods (a core trait), so the alias must live in core.
futures = { workspace = true }
bytes = { workspace = true }
