[package]
name = "weft-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
cron = "0.12"
sha2 = { workspace = true }
# Storage-plane byte streaming: `storage::ByteStream` is a
# `futures::stream::BoxStream` of Bytes, named in the `ContextHandle`
# storage methods (a core trait), so the alias must live in core.
futures = { workspace = true }
bytes = { workspace = true }
# Signed routing-token mint/verify (`caller_token`): the dispatcher signs
# a (color, project, pod) token at the control handshake; the worker
# verifies it before accepting a live connection. HMAC-SHA256 over a
# base64url payload, mirroring `weft-storage::capability`.
hmac = { workspace = true }
base64 = { workspace = true }

[features]
# Ships the hand-rolled fakes colocated with their traits (currently
# `caller::FakeCallerConnection`) so downstream crates can wire them into
# layer-3 tests. Off by default; consumers enable it in `[dev-dependencies]`.
test-helpers = []
