[package]
name = "weft-dispatcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "weft-dispatcher"
path = "src/main.rs"

[dependencies]
weft-core = { workspace = true }
weft-journal = { workspace = true }
weft-task-store = { workspace = true }
weft-listener = { path = "../weft-listener" }
weft-broker-client = { path = "../weft-broker-client" }
weft-platform-traits = { workspace = true }
weft-storage = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { workspace = true }
dashmap = "6"
cron = "0.12"
sha2 = { workspace = true }
hex = "0.4"
url = { workspace = true }

[features]
test-helpers = []

[dev-dependencies]
tempfile = { workspace = true }
weft-listener = { path = "../weft-listener" }
weft-dispatcher = { path = ".", features = ["test-helpers"] }
weft-platform-traits = { workspace = true, features = ["test-helpers"] }
weft-storage = { workspace = true, features = ["test-helpers"] }
