[package]
name = "weft-listener"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "weft-listener"
path = "src/main.rs"

[dependencies]
weft-core = { path = "../weft-core" }
weft-task-store = { workspace = true }
weft-broker-client = { path = "../weft-broker-client" }
weft-platform-traits = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
cron = "0.12"
dashmap = "6"
inventory = { workspace = true }
futures-util = "0.3"
hex = "0.4"
rand = "0.8"
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
