[package]
name = "weft-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "weft-runner"
path = "src/main.rs"

[dependencies]
weft-core = { workspace = true }
weft-stdlib = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
weft-compiler = { workspace = true }
